fix: allow menu to scroll on mobile

--- a/assets/scss/components/_frame.scss
+++ b/assets/scss/components/_frame.scss
@@ -27,6 +27,7 @@
 
 .Frame-header {
   flex-shrink: 0;
+  overflow-x: scroll;
 }
 
 .Frame-body {
